--- a/src/views/main/home.ejs
+++ b/src/views/main/home.ejs
@@ -1,23 +1,6 @@
 <%- include('../partial/navbar') %>
-
-
-<!-- Breadcrumb Start -->
-    <div class="container-fluid">
-        <div class="row px-xl-5">
-            <div class="col-12">
-                <nav class="breadcrumb bg-light mb-30">
-                    <a class="breadcrumb-item text-dark" href="/">Home</a>
-                    <a class="breadcrumb-item text-dark" href="/cart">Shopping Cart</a>
-                    <span class="breadcrumb-item active">Shop List</span>
-                </nav>
-            </div>
-        </div>
-    </div>
-    <!-- Breadcrumb End -->
-
-
     <!-- Shop Start -->
-    <div class="container-fluid">
+    <div class="container-fluid mt-5">
         <div class="row px-xl-5">
             <!-- Shop Sidebar Start -->
             <div class="col-lg-3 col-md-4">
